# ms2rescore

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CONTRIBUTING.rst  Dockerfile  MANIFEST.in  README.md  build.spec  config.json  config_maxquant.json  config_peptideshaker.json  config_tandem.json  configuration.md  driver.py  features2pin.py  features_to_pin.py  maxquant_to_rescore.py  meta.yaml  mgf_msgf2pin.py  ms2rescore.spec  ms2rescore_innosetup.iss  msgf_to_rescore.py  msgfpercolator.py  pin2pepfile.py  pin_to_pepfile.py  prepare_pin_files.py  pyproject.toml  rescore.py  setup.py  tandem_to_rescore.py
.github/workflows/: build-exe.yml  publish.yml  test.yml  windows_installer.yml
docs/: requirements.txt
docs/source/: LICENSE.txt  cli.rst  conf.py  config_schema.md  gui.rst  index.rst  installation.rst
docs/source/_static/css/: custom.css
docs/source/_static/js/: badge.min.js
docs/source/api/: ms2rescore.feature_generators.rst  ms2rescore.report.rst  ms2rescore.rescoring_engines.rst  ms2rescore.rst
docs/source/cli/: cli.rst
docs/source/userguide/: configuration.rst  input-files.rst  output-files.rst  search-engine-notes.rst  tims2Rescore.rst
examples/: mascot-ms2rescore.json  mascot-ms2rescore.toml  maxquant-ms2rescore.json  maxquant-ms2rescore.toml  msgfplus-ms2rescore.json  msgfplus-ms2rescore.toml  peptideshaker-ms2rescore.json  peptideshaker-ms2rescore.toml  readme.txt  sage-ms2rescore.json  sage-ms2rescore.toml  xtandem-ms2rescore.json  xtandem-ms2rescore.toml
examples/fasta/: pyro_crap_td.fasta
examples/parameters/: mqpar.xml  msgfplus_modifications.txt
gui-windows/: install-gui-windows.bat  start-gui-windows.bat  upgrade-gui-windows.bat
manuscript/: detailed-execution.ipynb  reproducing-results.ipynb
manuscript/pyrfu/: Velos005137.PEPREC  config.json
mapper/: .gitignore  __init__.py  mapper.py
ms2rescore/: __init__.py  __main__.py  _exceptions.py  _version.py  config_parser.py  core.py  exceptions.py  gui.py  id_file_parser.py  mapper.py  maxquant.py  maxquant_to_rescore.py  ms2rescore.py  ms2rescore_driver.py  ms2rescore_main.py  msgf_to_rescore.py  parse_mgf.py  parse_psms.py  parse_spectra.py  peptide_record.py  peptideshaker.py  peptideshaker_to_rescore.py  percolator.py  pin_to_rescore.py  plotting.py  rescore_core.py  retention_time.py  runner.py  setup_logging.py  tandem_to_rescore.py  utils.py
ms2rescore/feature_generators/: __init__.py  _base_classes.py  base.py  basic.py  deeplc.py  im2deep.py  intensity.py  ionmob.py  maxquant.py  ms2.py  ms2pip.py
ms2rescore/feature_generators/missing_fragmentations/: evidence.py  missing_frag_fgen.py  utils.py
ms2rescore/gui/: __main__.py  app.py  function2ctk.py  widgets.py
ms2rescore/im2deep_data/: Tenzer_unimod.parquet
ms2rescore/mapper/: mapper.py
ms2rescore/package_data/: config_default.json  config_default_tims.json  config_schema.json  ms2rescore-gui-theme.json
ms2rescore/report/: __init__.py  __main__.py  charts.py  generate.py  utils.py
ms2rescore/report/templates/: about.html  base.html  config.html  log.html  metadata.html  overview.html  stats-card.html  style.html  target-decoy.html  texts.toml
ms2rescore/rescoring_engines/: __init__.py  mokapot.py  percolator.py
ms2rescore/tests/: test_ms2rescore.py
ms2rescore/tests/data/: msms_sample_expected.pkl
streamlit/: Dockerfile  ms2rescore_streamlit.py  requirements.txt  streamlit_utils.py
tests/: note.txt  test_comet.py  test_config_parser.py  test_maxquant.py  test_ms2rescore.py  test_mzid.py  test_parse_spectra.py  test_peptideshaker.py  test_percolator.py  test_spectrum_mill.py  test_spectrummill.py
tests/data/: comet_sample.txt  comet_sample_expected_peprec.pkl  msms_sample.txt  msms_sample_expected.peprec  msms_sample_expected.pkl  msms_sample_expected_features.pkl  msms_sample_expected_peprec.pkl  mzid_sample_expected_peprec.pkl  peptideshaker_sample.txt  peptideshaker_sample_expected_peprec.pkl  spectrummill_sample.ssv  spectrummill_sample_expected_peprec.pkl
tests/data/mgf/: B001981_Ap_CMB-89_GevaertLab_ShotGun_HCT116_1_sample.mgf  B001991_Ap_CMB-89_GevaertLab_ShotGun_HCT116_2_sample.mgf  B002003_Ap_CMB-89_GevaertLab_ShotGun_HCT116_3_sample.mgf  B002005_Ap_CMB-89_GevaertLab_ShotGun_HCT116_4_sample.mgf
tests/test_data/: msms-psms.tsv  test.mgf
wiki/: README.md  reproducing-manuscript-results.md  using-msgf-to-rescore.md
