[project]
name = "ms2rescore"
description = "MS²Rescore: Sensitive PSM rescoring with predicted MS² peak intensities and retention times."
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "MS2Rescore",
    "MS2PIP",
    "DeepLC",
    "Percolator",
    "proteomics",
    "mass spectrometry",
    "peptide identification",
    "rescoring",
    "machine learning",
]
authors = [
    { name = "Ralf Gabriels", email = "ralf@gabriels.dev" },
    { name = "Arthur Declercq", email = "arthur.declercq@ugent.be" },
    { name = "Ana Sílvia C. Silva" },
    { name = "Robbin Bouwmeester" },
    { name = "Louise Buur" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Development Status :: 5 - Production/Stable",
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "cascade-config>=0.4.0",
    "click>=7",
    "customtkinter>=5,<6",
    "deeplc>=2.2",
    "deeplcretrainer>=0.2",
    "im2deep>=0.1.3",
    "jinja2>=3",
    "lxml>=4.5",
    "mokapot>=0.9",
    "ms2pip>=4.0.0",
    "ms2rescore_rs>=0.3.0",
    "numpy>=1.16.0",
    "pandas>=1.0",
    "plotly>=5",
    "psm_utils>=0.9",
    "pyteomics>=4.7.2",
    "rich>=12",
    "tomli>=2; python_version < '3.11'",
]

[project.optional-dependencies]
ionmob = ["ionmob>=0.2", "tensorflow"]
dev = ["ruff", "black", "pytest", "pytest-cov", "pre-commit"]
docs = [
    "sphinx",
    "myst-parser",
    "nbsphinx",
    "numpydoc>=1,<2",
    "semver>=2",
    "sphinx_inline_tabs",
    "sphinx_rtd_theme",
    "sphinx-argparse",
    "sphinx-autobuild",
    "toml",
]

[project.urls]
GitHub = "https://github.com/compomics/ms2rescore"
ReadTheDocs = "https://ms2rescore.readthedocs.io"
PyPi = "https://pypi.org/project/ms2rescore/"
CompOmics = "https://www.compomics.com"

[project.scripts]
ms2rescore = "ms2rescore.__main__:main"
ms2rescore-gui = "ms2rescore.gui.__main__:main"
ms2rescore-report = "ms2rescore.report.__main__:main"
tims2rescore = "ms2rescore.__main__:main_tims"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.isort]
profile = "black"

[tool.black]
line-length = 99
target-version = ['py38']

[tool.ruff]
line-length = 99
target-version = 'py38'

[tool.ruff.lint]
extend-select = ["T201", "T203"]
